Fix header elements to align to borders of the pages content. Make content width a variable. Fix random button sizing.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@
 
 
     div{
-        width:70%;
+        width: $contentWidth;
     }
 }
 
